// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.textarea $ariaDetails 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $ariaDetails 2`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $ariaSpeak 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="my-test-id txt2 my-test-id2"
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  >
    Hello
  </section>
</wup-textarea>
`;

exports[`control.textarea $ariaSpeak 2`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="my-test-id my-test-id2"
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $show/$hide error 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $show/$hide error 2`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt2"
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="opacity: 0;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea $show/$hide error 3`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea common tests render + styles 1`] = `<wup-textarea />`;

exports[`control.textarea common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height: 1px; width: 1px;
top:0;left:0;
overflow: hidden;
clip: rect(1px, 1px, 1px, 1px);}
  :root {
          --base-bg: #fff;
          --base-text: #232323;
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --base-btn3-bg: var(--base-bg);
          --base-btn3-text: inherit;
          --base-sep: #e4e4e4;
          --border-radius: 6px;
          --anim-time: 200ms;
          --anim: var(--anim-time) cubic-bezier(0, 0, 0.2, 1) 0ms;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--base-focus);
        --ctrl-selected: var(--ctrl-focus-label);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl-bg: var(--base-bg);
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err-text: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-icon-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
      }
  :root {
      --ctrl-clear-hover: rgba(255,0,0,0.1);
      --ctrl-clear-hover-size: 22px;
     }
  
      WUP-TEXTAREA {
        contain: style;
        display: block;
        margin-bottom: 20px;
        position: relative;
        border-radius: var(--ctrl-border-radius);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-TEXTAREA strong,
      WUP-TEXTAREA legend {
        color: var(--ctrl-label);
        pointer-events: none;
      }
      WUP-TEXTAREA:focus-within,
      WUP-TEXTAREA:focus-within &gt; [menu] {
        z-index: 90010;
        box-shadow: 0 0 0 1px var(--ctrl-focus);
      }
      WUP-TEXTAREA:focus-within strong,
      WUP-TEXTAREA:focus-within legend {
        color: var(--ctrl-focus-label);
        pointer-events: initial;
      }
      [disabled] WUP-TEXTAREA,
      WUP-TEXTAREA[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled] WUP-TEXTAREA &gt; *,
      WUP-TEXTAREA[disabled] &gt; * {
        pointer-events: none;
      }
      WUP-TEXTAREA[invalid],
      WUP-TEXTAREA[invalid] &gt; [menu] {
        box-shadow: 0 0 3px 1px var(--ctrl-invalid-border);
      }
      WUP-TEXTAREA label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-TEXTAREA input,
      WUP-TEXTAREA textarea,
      WUP-TEXTAREA [contenteditable] {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-TEXTAREA strong {
        cursor: inherit;
      }
      WUP-TEXTAREA [aria-required="true"] + strong:after,
      WUP-TEXTAREA fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-TEXTAREA [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err-text);
        background: var(--ctrl-err-bg);
        max-height: 3em;
        overflow: auto;
        overflow: overlay;
      }
      WUP-TEXTAREA [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-TEXTAREA [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-TEXTAREA [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err-text);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 0 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-TEXTAREA [error] li[valid] {
        color: var(--ctrl-err-icon-valid);
      }
      WUP-TEXTAREA [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-icon-valid);
      }
      WUP-TEXTAREA:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) and (pointer: fine) {
        /*WUP-TEXTAREA:hover {
          z-index: 90011;
        }
        WUP-TEXTAREA:hover [error] {
          max-height: none;
        }*/
        WUP-TEXTAREA:hover,
        WUP-TEXTAREA:hover &gt; [menu] {
          box-shadow: 0 0 3px 1px var(--ctrl-focus);
        }
        WUP-TEXTAREA[invalid]:hover,
        WUP-TEXTAREA[invalid]:hover &gt; [menu] {
          box-shadow: 0 0 3px 1px var(--ctrl-invalid-border);
        }
      }
        WUP-TEXTAREA {
          cursor: text;
        }
        WUP-TEXTAREA label &gt; span {
          width: 100%;
          position: relative;
          display: flex;
          flex-direction: row-reverse;
        }
        WUP-TEXTAREA input,
        WUP-TEXTAREA textarea,
        WUP-TEXTAREA [contenteditable],
        WUP-TEXTAREA [maskholder],
        WUP-TEXTAREA [prefix],
        WUP-TEXTAREA [postfix] {
          padding: var(--ctrl-padding);
          padding-left: 0;
          padding-right: 0;
          font: inherit;
          color: inherit;
          margin: 0;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        WUP-TEXTAREA input,
        WUP-TEXTAREA textarea,
        WUP-TEXTAREA [contenteditable],
        WUP-TEXTAREA [maskholder],
        WUP-TEXTAREA [postfix] {
          width: 100%;
          box-sizing: border-box;
          border: none;
          background: none;
          outline: none;
        }
        WUP-TEXTAREA [prefix],
        WUP-TEXTAREA [postfix] {
          color: var(--ctrl-label);
          flex-shrink: 0;
        }
        WUP-TEXTAREA [maskholder],
        WUP-TEXTAREA [prefix],
        WUP-TEXTAREA [postfix] {
          display: none;
          pointer-events: none;
          text-overflow: initial;
          white-space: pre;
        }
        WUP-TEXTAREA [postfix] {
          position: absolute;
        }
        WUP-TEXTAREA [maskholder] {
          position: absolute;
          opacity: 0.65;
        }
        WUP-TEXTAREA [maskholder]&gt;i,
        WUP-TEXTAREA [postfix]&gt;i {
          visibility: hidden;
          font: inherit;
          white-space: pre;
        }
        WUP-TEXTAREA input:-webkit-autofill,
        WUP-TEXTAREA textarea:-webkit-autofill,
        WUP-TEXTAREA [contenteditable]:-webkit-autofill {
          font: inherit;
          -webkit-background-clip: text;
        }
        WUP-TEXTAREA input:autofill,
        WUP-TEXTAREA textarea:autofill,
        WUP-TEXTAREA [contenteditable]:autofill {
          font: inherit;
          background-clip: text;
        }
        WUP-TEXTAREA strong {
          display: block;
          position: absolute;
          top: 50%;
          left: 0;
          padding: 0;
          margin: 0;
          box-sizing: border-box;
          max-width: 100%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          transform-origin: top left;
          transform: translateY(-50%);
          font-weight: normal;
          text-decoration: none;
        }
        @media not all and (prefers-reduced-motion) {
          WUP-TEXTAREA strong {
            transition: top var(--anim), transform var(--anim), color var(--anim);
          }
        }
        WUP-TEXTAREA input:not(:focus)::placeholder,
        WUP-TEXTAREA textarea:not(:focus)::placeholder {
          color: transparent;
        }
        WUP-TEXTAREA:focus-within strong,
        WUP-TEXTAREA input:not(:placeholder-shown) + strong,
        WUP-TEXTAREA textarea:not(:placeholder-shown) + strong,
        WUP-TEXTAREA [contenteditable]:not(:empty) + strong,
        WUP-TEXTAREA legend {
          top: 0.2em;
          transform: scale(0.9);
        }
        WUP-TEXTAREA:focus-within [maskholder],
        WUP-TEXTAREA:focus-within [prefix],
        WUP-TEXTAREA:focus-within [postfix],
        WUP-TEXTAREA input:not(:placeholder-shown) ~ [prefix],
        WUP-TEXTAREA input:not(:placeholder-shown) ~ [postfix],
        WUP-TEXTAREA textarea:not(:placeholder-shown) ~ [prefix],
        WUP-TEXTAREA textarea:not(:placeholder-shown) ~ [postfix] {
          display: inline-block;
        }
        /* style for icons */
        WUP-TEXTAREA label button,
        WUP-TEXTAREA label button:after,
        WUP-TEXTAREA label:after,
        WUP-TEXTAREA label:before {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 0 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          -webkit-mask-image: none;
          mask-image: none;
        }
        WUP-TEXTAREA label:after {
          cursor: pointer;
          margin-right: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-TEXTAREA label:before {
          cursor: pointer;
          margin-left: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-TEXTAREA label button {
           z-index: 1;
           contain: strict;
        }
        WUP-TEXTAREA label&gt;span + button {
          margin-right: -0.5em;
        }
        WUP-TEXTAREA button[clear] {
          position: relative;
          background: none;
        }
        WUP-TEXTAREA button[clear]:after {
          content: "";
          padding: 0;
          -webkit-mask-image: var(--wup-icon-cross);
          mask-image: var(--wup-icon-cross);
        }
        WUP-TEXTAREA button[clear]:after,
        WUP-TEXTAREA button[clear]:before {
          position: absolute;
          top: 50%; left: 50%;
          transform: translate(-50%, -50%);
          width: 100%;
          padding-top: 100%;
        }
        WUP-TEXTAREA button[clear]:before {
          width: var(--ctrl-clear-hover-size);
          padding-top: var(--ctrl-clear-hover-size);
        }
        @media (hover: hover) and (pointer: fine) {
          WUP-TEXTAREA button[clear]:hover {
            box-shadow: none;
          }
          WUP-TEXTAREA button[clear]:hover:before {
            content: "";
            border-radius: 50%;
            box-shadow: inset 0 0 0 99999px var(--ctrl-clear-hover);
          }
          WUP-TEXTAREA button[clear]:hover:after {
            background-color: var(--ctrl-err-text);
          }
          WUP-TEXTAREA[readonly] button[clear] {
            pointer-events: none;
          }
        }
        WUP-TEXTAREA strong { top: 1.6em; }
        WUP-TEXTAREA [contenteditable] {
          min-height: 4em;
          max-height: 4em;
          resize: none;
          display: inline-block; 
          cursor: text;
          white-space: pre-wrap;
          word-break: break-word;
          overflow-wrap: break-word;
          overflow: auto;
          margin: var(--ctrl-padding);
          padding: 0;
          margin-left: 0;
          margin-right: 0;
        }
        
WUP-TEXTAREA [contenteditable]::-webkit-scrollbar {
  width: 10px; height: 10px;
}
WUP-TEXTAREA [contenteditable]::-webkit-scrollbar-corner {
  background: none;
}
WUP-TEXTAREA [contenteditable]::-webkit-scrollbar-thumb {
  border: 3px solid rgba(0,0,0,0);
  background-clip: padding-box;
  background-color: var(--scroll, rgba(0,0,0,0.2));
  border-radius: 999px;
}
WUP-TEXTAREA [contenteditable]::-webkit-scrollbar-track-piece:vertical:start,
WUP-TEXTAREA [contenteditable]::-webkit-scrollbar-track-piece:vertical:end,
WUP-TEXTAREA [contenteditable]::-webkit-scrollbar-track-piece:horizontal:start,
WUP-TEXTAREA [contenteditable]::-webkit-scrollbar-track-piece:horizontal:end {
  margin: 0;
}
@media (hover) {
  WUP-TEXTAREA [contenteditable]::-webkit-scrollbar-thumb:hover {
    background-color: var(--scroll-hover, rgba(0,0,0,0.5));
  }
}
</style>
`;

exports[`control.textarea options clearButton 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt2"
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  />
</wup-textarea>
`;

exports[`control.textarea options clearButton 2`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt2"
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  />
</wup-textarea>
`;

exports[`control.textarea validations $options.validationShowAll 1`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt2"
        aria-labelledby="txt1"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min length is 2 characters
      </li>
      <li>
        Max length is 3 characters
      </li>
      <li>
        Invalid email address
      </li>
    </ul>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations $options.validationShowAll 2`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt2"
        aria-labelledby="txt1"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      >
        123
      </span>
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span
      class="wup-hidden"
    >
      Invalid email address
    </span>
    <ul
      aria-hidden="true"
    >
      <li
        valid=""
      >
        Min length is 2 characters
      </li>
      <li
        valid=""
      >
        Max length is 3 characters
      </li>
      <li>
        Invalid email address
      </li>
    </ul>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations $options.validationShowAll 3`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt5"
        aria-labelledby="txt1"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      >
        First Name
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-labelledby="txt1"
        contenteditable="true"
        role="textbox"
      >
        123
      </span>
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 2`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt3"
        aria-labelledby="txt1"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      >
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt3"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 3`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt4"
        aria-labelledby="txt1"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      >
        123
      </span>
      <strong
        id="txt1"
      >
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt4"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 4`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-describedby="txt5"
        aria-labelledby="txt1"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      >
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea with form 1`] = `
<wup-form
  role="form"
>
  <wup-textarea>
    <label
      for="txt1"
    >
      <span>
        <span
          aria-labelledby="txt1"
          contenteditable="true"
          role="textbox"
        />
        <strong
          id="txt1"
        >
          First Input
        </strong>
      </span>
      <button
        aria-hidden="true"
        clear=""
        tabindex="-1"
      />
    </label>
  </wup-textarea>
</wup-form>
`;
